fix: fix z-index components header

--- a/src/components/cart/main-section/PaymentPath.module.css
+++ b/src/components/cart/main-section/PaymentPath.module.css
@@ -5,7 +5,7 @@
    padding: 24px 32px;
    background-color: #fff;
    position: absolute;
-   z-index: 3;
+   z-index: 1;
    box-shadow:
       0px 8px 32px 0px rgba(255, 126, 0, 0.16),
       0px 2px 4px 0px rgba(172, 85, 0, 0.08);
