--- a/src/components/header/menu-company/MenuCompany.module.css
+++ b/src/components/header/menu-company/MenuCompany.module.css
@@ -11,10 +11,10 @@
    animation: slideDown 0.3s ease-in-out;
    width: 100%;
    position: absolute;
-   z-index: 1;
    background-color: #2b3143;
    display: block;
    padding-bottom: 30px;
+   z-index: 3;
 }
 
 .container {
