--- a/src/components/header/menu-products/MenuProducts.module.css
+++ b/src/components/header/menu-products/MenuProducts.module.css
@@ -10,11 +10,12 @@
 .menuProducts {
    width: 100%;
    position: absolute;
-   z-index: 1;
+   z-index: 3;
    background-color: #2b3143;
    display: block;
    padding-bottom: 30px;
    animation: slideDown 0.3s ease-in-out;
+
 }
 
 .container {
